--- a/pacman/etc/pacman.conf
+++ b/pacman/etc/pacman.conf
@@ -22,7 +22,7 @@ HoldPkg     = pacman glibc
 Architecture = auto
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
-IgnorePkg    = linux-firmware
+IgnorePkg   = linux-lts linux-lts-headers zfs-linux-lts zfs-utils
 #IgnoreGroup =
 
 #NoUpgrade   =
@@ -31,9 +31,10 @@ IgnorePkg    = linux-firmware
 # Misc options
 #UseSyslog
 Color
-#TotalDownload
+#NoProgressBar
 CheckSpace
 #VerbosePkgLists
+ParallelDownloads = 5
 ILoveCandy
 
 # By default, pacman accepts packages signed by keys that its local keyring
@@ -69,35 +70,17 @@ LocalFileSigLevel = Optional
 # repo name header and Include lines. You can add preferred servers immediately
 # after the header, and they will be used before the default mirrors.
 
-#[testing]
-#Include = /etc/pacman.d/mirrorlist
-
 [core]
 Include = /etc/pacman.d/mirrorlist
 
 [extra]
 Include = /etc/pacman.d/mirrorlist
 
-#[community-testing]
-#Include = /etc/pacman.d/mirrorlist
-
 [community]
 Include = /etc/pacman.d/mirrorlist
-
-# If you want to run 32 bit applications on your x86_64 system,
-# enable the multilib repositories as required here.
-
-#[multilib-testing]
-#Include = /etc/pacman.d/mirrorlist
 
 [multilib]
 Include = /etc/pacman.d/mirrorlist
 
-# An example of a custom package repository.  See the pacman manpage for
-# tips on creating your own repositories.
-#[custom]
-#SigLevel = Optional TrustAll
-#Server = file:///home/custompkgs
-
-[chaotic-aur]
-Include = /etc/pacman.d/chaotic-mirrorlist
+[archzfs]
+Include = /etc/pacman.d/mirrorlist-archzfs
