--- a/x11/etc/X11/xorg.conf.d/00-keyboard.conf
+++ b/x11/etc/X11/xorg.conf.d/00-keyboard.conf
@@ -3,5 +3,5 @@ Section "InputClass"
         MatchIsKeyboard "on"
         Option "XkbLayout" "gb"
         Option "XkbModel" "pc105"
-        Option "XkbOptions" "caps:swapescape,altwin:swap_alt_win,ctrl:ralt_rctrl"
+        Option "XkbOptions" "altwin:swap_alt_win"
 EndSection
